Embed Button fix alignment in iframe

--- a/assets/css/components/Table.scss
+++ b/assets/css/components/Table.scss
@@ -27,7 +27,7 @@
     }
     .outputpane-iframe-control-overlay {
       position: absolute;
-      margin-top: 1.5rem;
+      margin-top: 1.6rem;
       right:7.5rem;
       width: 4rem;
       height: 4rem;
